# popup-dict

./: .babelrc  .gitignore  README.md  gulpfile.babel.js  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.common.js  webpack.dev.js  webpack.prod.js
app/: manifest.json
app/_locales/en/: messages.json
app/pages/: options.dev.html  options.html  options.prod.html  popup.html
app/scripts/: Options.vue  background.ts  cachedmap.ts  command.ts  content.ts  contextmenu.ts  database.ts  dictionary.ts  enabled.ts  entry.ts  frequency.ts  globals.d.ts  highlighter.ts  importer.ts  language.ts  languages.ts  lemmatizer.ts  options.ts  options.tsx  package.ts  packages.ts  popup.ts  popupDialog.ts  router.ts  search.ts  selection.ts  settings.ts  stats.ts  tokenizer.ts  tooltip.ts  trie.ts  trie_dictionary_binding.d.ts  trie_dictionary_binding.js  trie_dictionary_binding_bg.js  userInput.ts  util.ts  vue2-dropzone.d.ts  word.ts
app/styles/: contentscript.scss  highlighter.css  highlighter.scss  options.scss  popup.scss
rust/binding/: Cargo.toml
rust/binding/src/: lib.rs
rust/trie/: Cargo.toml
rust/trie/src/: dict.rs  lib.rs  trie.rs
scripts/: build-cedict-package.ts  build-ejdic-package.ts  build-wiktionary-package.ts  build_dictionary.py  build_dictionary.ts  build_entries.py  build_files.sh  build_lemmatizer.py  build_trie.py  cedict.py  cedict_hanzi.py  dictcc.py  english_wiktionary.py  merge_words.py  parse_eijiro.py  util.py  util.ts
tasks/: build.js  chromereload.js  data.js  manifest.js  scripts.js  styles.js
(+100 files in other folders)
