[package]
name = "trie-dictionary-binding"
version = "0.1.0"
authors = ["Yuichiro Sawai <sawai.yuichiro.sn0@is.naist.jp>"]

[features]
default-features = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
trie-dictionary = { path = "../trie-dictionary" }
console_error_panic_hook = { version = "0.1.1", optional = true }
