[package]
name = "trie-dictionary"
version = "0.1.0"
authors = ["Yuichiro Sawai <sawai.yuichiro.sn0@is.naist.jp>"]

[lib]
name = "dictionary"
path = "src/lib.rs"

[[bin]]
name = "compile_dictionary"
path = "src/bin/compile_dictionary.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
bincode = "1.0"
snap = "0.2"
clap = "2.32"
double-array-trie = { git = "https://github.com/yuichiro-s/rust-double-array-trie" }